--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^5.0.1",
     "favicons-webpack-plugin": "^4.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
